--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Jufebrown/sequelize-exercise#readme",
   "dependencies": {
     "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.13.5"
   }
 }
