--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.13.5"
+    "sequelize": "^4.13.5",
+    "sequelize-cli": "^3.0.0"
   }
 }
